--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -7,10 +7,27 @@ permalink: /index.html
 {% block content %}
 
     <div class="s-section">
-        <div class="s-section__content">
-            <h1 class="firstsection__title">
-                Mate
-            </h1>
+        <div class="s-section__content landPage">
+            <div class="landPage__imgSection">
+                <img src="../../assets/img/Mate_Logo_White.svg" alt="Mate's Logo" class="o-fluidimg landPage__logoHidden">
+            </div>
+            <img src="../../assets/img/Mate_Logo_White.svg" alt="Mate's Logo" class="o-fluidimg landPage__logo">
+            <ul class="landPage__menu">
+                <li class="">
+                    <a href="index.html">home </a>
+                  </li>
+                  <li class="">
+                    <a href="collection.html">collection</a>
+                  </li>
+                  <li class="">
+                    <a href="shop.html">shop</a>
+                  </li>
+                  <li class="">
+                    <a href="about.html">about</a>
+                  </li>
+            </ul>
+            <p class="landPage__scrollH">scroll >>></p>
+            <div class="landPage__scrollV"></div>
         </div>
     </div>
 
