--- a/src/assets/scss/partials/mainnav.scss
+++ b/src/assets/scss/partials/mainnav.scss
@@ -34,6 +34,7 @@
     justify-content: center;
 
     border: 1px var(--color-grey-100) solid;
+    border-style: none none solid none;
     box-sizing: border-box;
 
 }
@@ -47,6 +48,8 @@
 .mainnav__logo {
 
     grid-area: 1 / 1 / 2 / 2;
+
+    border-right-style: solid;
 
 }
 
@@ -245,6 +248,7 @@
         justify-content: center;
     
         border: 1px solid var(--color-grey-100);
+        border-style: none solid;
         box-sizing: border-box;
     
     }
@@ -266,6 +270,9 @@
     .mainnav__logo {
     
         grid-area: 2 / 1 / 3 / 2;
+
+        border-top-style: solid;
+        border-bottom-style: solid;
     
     }
     
