Fixing shop Absolute issue + adding section__end class

--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -111,6 +111,13 @@
     
     }
 
+    .s-section__end::after {
+
+        width: 0;
+        height: 0;
+
+    }
+
     .s-section {
 
         display: flex;
