--- a/src/content/pages/shop.njk
+++ b/src/content/pages/shop.njk
@@ -11,6 +11,8 @@ permalink: /shop.html
             <h1 class="section__title">
                 Shop
             </h1>
+        </div>
+        <div class="shop__container">
             <div class="shop__content">
                 <ul class="shop__list">
                     <li class="shop__item">
@@ -229,6 +231,17 @@ permalink: /shop.html
                     </li>
                 </ul>
             </div>
+        </div>
+    </div>
+
+    <div class="s-section s-section__green s-section__end">
+        <div class="s-section__number">
+            <p>01</p>
+        </div>
+        <div class="s-section__content">
+            <h1 class="s-section__title">
+                Ardennes
+            </h1>
         </div>
     </div>
 
