Shop Responsive WIP + Background image parallax + scroll smoothness tweak + page icon

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mate</title>
-    <link rel="icon" type="image/x-icon" href="assets/img/Logo_Big.ico">
+    <link rel="icon" type="image/x-icon" href="../../assets/img/Mate_icon.png">
     <link rel="stylesheet" href="/assets/css/main.css" />
     <script type="module" src="/assets/js/app.bundle.js"></script>
     <script type="module" src="/assets/js/mainnav.bundle.js"></script>
