--- a/src/assets/scss/page/index.scss
+++ b/src/assets/scss/page/index.scss
@@ -41,7 +41,7 @@ LANDING PAGE
   margin-right: -12px;
 
   background-image: url(../img/landPageImg2.JPG);
-  background-position: center;
+  background-position: 50% 50%;
   background-repeat: no-repeat;
   background-size: cover;
 
@@ -130,8 +130,8 @@ LANDING PAGE
 
     margin-left: 750px;
 
-    background-image: url(../img/landPageImg.JPG);
-    background-position: center;
+    background-image: url(../img/landPageImg2.JPG);
+    background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
   }
