--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -8,7 +8,7 @@ permalink: /index.html
 
     <div class="s-section">
         <div class="s-section__content landPage">
-            <div class="landPage__imgSection">
+            <div class="landPage__imgSection anim__backgroundimg">
                 <img src="../../assets/img/Mate_Logo_White.svg" alt="Mate's Logo" class="o-fluidimg landPage__logoHidden">
             </div>
             <img src="../../assets/img/Mate_Logo_White.svg" alt="Mate's Logo" class="o-fluidimg landPage__logo">
