Usage of vh for font-sizes

--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -146,7 +146,7 @@
         height: 100%;
         aspect-ratio: 1.5/1;
         
-        font-size: 720px;
+        font-size: 75vh;
         font-family: "Panchang";
         font-weight: 200;
 
@@ -183,7 +183,7 @@
 
         font-family: "Panchang";
         font-weight: 700;
-        font-size: 240px;
+        font-size: 25vh;
         text-align: left;
 
         color: var(--color-black);
