--- a/src/assets/scss/partials/mainnav.scss
+++ b/src/assets/scss/partials/mainnav.scss
@@ -345,7 +345,7 @@
 
         font-family: var(--fontstack-alt);
         font-weight: 700;
-        font-size: calc(156 / 16 * 1rem);
+        font-size: 15vh;
 
         color: var(--color-green-200);
 
