--- a/src/content/pages/shop.njk
+++ b/src/content/pages/shop.njk
@@ -8,7 +8,7 @@ permalink: /shop.html
 
     <div class="s-section">
         <div class="s-section__content">
-            <h1 class="section__title">
+            <h1 class="s-section__title">
                 Shop
             </h1>
         </div>
