--- a/src/assets/scss/params/_params-typography.scss
+++ b/src/assets/scss/params/_params-typography.scss
@@ -37,14 +37,14 @@ h2 {
 @media all and (min-width: 1024px) {
 
   h1 {
-    font-size: 240px;
+    font-size: 25vh;
 
     grid-area: 1 / 1 / 3 / 1;
 
   }
 
   h2 {
-    font-size: 60px;
+    font-size: 4vh;
 
   }
 
