Landing Page + 1st Section Responsive

--- a/src/assets/scss/base/_base-section.scss
+++ b/src/assets/scss/base/_base-section.scss
@@ -9,6 +9,12 @@
 
 }
 
+@media all and (min-width: 745px){
+    .s-section {
+        padding: 30px 24px;
+    }
+}
+
 .s-section__content {
 
     overflow: hidden;
