--- a/src/content/pages/index.njk
+++ b/src/content/pages/index.njk
@@ -43,27 +43,31 @@ permalink: /index.html
                 <h2 class="firstsection__yearA"> 20 </h2>
                 <div>
                     <h3 class="firstsection__yearB"> 20 </h3>
-                    <div class="firstsection__text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce dictum nisi ut dictum suscipit. Etiam dapibus, ante at varius condimentum, quam odio aliquam lectus, nec varius odio orci at massa. Phasellus turpis turpis, hendrerit at pharetra sed, dapibus ut odio. Nullam congue leo ut libero aliquam commodo. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. </p>
-                        <p class="firstsection__text-link">>>></p>
-                    </div>
                 </div>
+            </div>
+            <div class="firstsection__text">
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce dictum nisi ut dictum suscipit. Etiam dapibus, ante at varius condimentum, quam odio aliquam lectus, nec varius odio orci at massa. Phasellus turpis turpis, hendrerit at pharetra sed, dapibus ut odio. <br><br> Nullam congue leo ut libero aliquam commodo. Phasellus sit amet neque non eros hendrerit faucibus non malesuada erat. </p>
+                <p class="firstsection__text-link">>>></p>
             </div>
         </div>
         <div class="s-section__content cardsection slideFromTop">
-            <h2 class="cardsection__title">Why Ardennes?</h2>
-            <p class="cardsection__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. <br> <br> Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo.</p>
-            <div class="cardsection__img"><img src="../../assets/img/ardennesMountains.JPG" alt="ardennesMountains" class="o-fluidimg"></div>
+            <div class="cardsection__content">
+                <h2 class="cardsection__title">Why Ardennes?</h2>
+                <p class="cardsection__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. <br> <br> Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo.</p>
+            </div>
+            <div class="cardsection__img"></div>
         </div>
         <div class="s-section__content cardsection reverse slideFromBottom">
-            <h2 class="cardsection__title">We focus on the Quality</h2>
-            <p class="cardsection__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. <br> <br> Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo.</p>
-            <div class="cardsection__img"><img src="../../assets/img/ardennesQuality.JPG" alt="ardennesMountains" class="o-fluidimg"></div>
+            <div class="cardsection__content">
+                <h2 class="cardsection__title">We focus on the Quality</h2>
+                <p class="cardsection__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent nec scelerisque nisi. <br> <br> Ut hendrerit lacinia orci. Sed pretium dui in massa dignissim, quis mollis ligula faucibus. Fusce. <br> <br> Nullam congue leo ut libero aliquam commodo.</p>
+            </div>
+            <div class="cardsection__img"></div>
         </div>
-        <div class="s-section__content learnmore">
+        <div class="s-section__content learnmore anim__backgroundimg">
             <div class="learnmore__button">
                 <p>Learn More</p>
-                <img src="../../assets/img/Mate_Star_DarkGreen.svg" alt="">
+                <img src="../../assets/img/Mate_Star_Green.svg" alt="">
             </div>
         </div>
     </div>
