--- a/src/assets/scss/params/_params-typography.scss
+++ b/src/assets/scss/params/_params-typography.scss
@@ -26,29 +26,44 @@ h2 {
   font-family: "DMSans";
   color: var(--color-text-light);
   font-weight: 700;
-  font-size: 42px;
+  font-size: 24px;
 
-  margin: 0;
-
+  margin-block-start: 30px;
+  margin-block-end: 12px;
+  
 }
 
 
 
-@media all and (min-width: 1024px) {
-
+@media all and (min-width: 745px) {
   h1 {
     font-size: 240px;
-
+    
     grid-area: 1 / 1 / 3 / 1;
+    
+  }
+  
+  h2 {
+    font-size: 24px;
+    margin-block-start: 0;
+    margin-block-end: 18px;
 
   }
+}
 
+@media all and (min-width: 1024px) {
+  h1 {
+    font-size: 240px;
+    
+    grid-area: 1 / 1 / 3 / 1;
+    
+  }
+  
   h2 {
     font-size: 60px;
+    margin: 0;
 
   }
-
-
 }
 
 
