First Section top padding

--- a/src/content/pages/shop.njk
+++ b/src/content/pages/shop.njk
@@ -6,7 +6,7 @@ permalink: /shop.html
 
 {% block content %}
 
-    <div class="s-section">
+    <div class="s-section s-firstSection">
         <div class="s-section__content">
             <h1 class="s-section__title">
                 Shop
